Added color to icons

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,7 +1,9 @@
 {
     "vertical_spacing": 2,
-    "icon_width": 7,
+    "icon_width": 6,
     "icon_scale": 0.7,
     "connector_segments": 40,
-    "connector_bendiness": 13
+    "connector_bendiness": 13,
+    "locked_color": "#21252c",
+    "hover_color": "#21252c"
 }
