--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -5,5 +5,5 @@
     "connector_segments": 40,
     "connector_bendiness": 13,
     "locked_color": "#21252c",
-    "hover_color": "#21252c"
+    "hover_color": "#e8ebed"
 }
