Added progression system

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -5,5 +5,7 @@
     "connector_segments": 40,
     "connector_bendiness": 13,
     "locked_color": "#21252c",
-    "hover_color": "#e8ebed"
+    "hover_color": "#e8ebed",
+    "connector_color": "#000000",
+    "connector_color_completed": "#d3edb9"
 }
