--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^3.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.1",
     "react-router-dom": "^7.9.4",
     "web-vitals": "^2.1.4"
   },
