--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learning-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://learnaccordion.com",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
